# Brickbyte

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  build_windows.sh
.gitlab/issue_templates/: bug_report.md  feature_request.md  issue_report.md
.gitlab/merge_request_templates/: merge_request_template.md
doc/: README.md  getting_started.md
doc/architecture/: index.md  player_mechanics.md  project_structure.md  rendering.md  world_managment.md
res/atlas/: block_atlas.raw  textureAtlas.raw  ui_atlas.raw
src/: gamestate.rs  main.rs
src/shader/: fragment.glsl  vertex.glsl
src/world/: chunk.rs  mod.rs  player.rs  world.rs
