[package]
name = "Brickbyte"
version = "0.0.1"
edition = "2024"
description = "A 3D Survival Voxel Game with OpenGL in Rust"
authors = ["Elias Steininger <https://stonie.dev>"]
license = "GPL-3.0-or-later"

[dependencies]
winit = "0.30.12"
glutin = "0.32.3"
glow = "0.16.0"
egui = "0.33.3"
egui-winit = "0.33.3"
egui_glow = "0.33.3"
glam = "0.30.9"
rand = "0.9.2"

[dev-dependencies]
flamegraph = "0.6.10"
