[package]
name = "Brickbyte"
version = "0.0.5"
edition = "2024"
description = "A 3D Survival Voxel Game with OpenGL in Rust"
authors = ["Elias Steininger <elias.st4600@gmail.com>", "Project Contributors (see https://gitlab.com/Stoniye/brickbyte/-/blob/main/CONTRIBUTORS.md)"]
license = "GPL-3.0-or-later"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false

[dependencies]
winit = "0.30.12"
glutin = "0.32.3"
glow = "0.17.0"
egui = "0.34.1"
egui-winit = "0.34.1"
egui_glow = "0.34.1"
glam = "0.32.1"
rand = "0.10.1"
worldgen = "0.5.3"

[dev-dependencies]
flamegraph = "0.6.10"
